# seeker-ai

./: .env.example  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_init.py
app/: config.py  deps.py  main.py
app/api/: conversations.py
app/db/: bootstrap.py  models.py  session.py
app/llm/: graph.py  message_mapper.py  prompts.py  provider.py
app/repositories/: conversation_repo.py  message_repo.py
app/schemas/: conversation.py  message.py  seeker.py
app/services/: chat_service.py  title_service.py
app/tools/: compaction.py  insights.py  seeker_client.py  seeker_tools.py
