[project]
name = "seeker-ai"
version = "0.1.0"
description = "FastAPI chatbot for seeker APM, calling seeker-web REST API as LangChain tools"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiomysql>=0.2.0",
    "pymysql>=1.1.1",
    "cryptography>=43.0.0",
    "alembic>=1.14.0",
    "httpx>=0.27",
    "langchain-core>=0.3.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.50",
    "langchain-google-genai>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
